2005-07-11  Daniel Berlin  <dberlin@dberlin.org>

* print-tree.c (print_node): Use DECL_ARGUMENT_FLD.
	* tree.h (DECL_ARGUMENT_FLD): New macro.

2005-07-11  Daniel Berlin  <dberlin@dberlin.org>

	Fix PR tree-optimization/22404

	* tree-ssa-structalias.c (create_variable_info_for): Use
	correct offset.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@101894 138bc75d-0d04-0410-961f-82ee72b054a4